# centraljersey

./: .gitignore  Makefile  README.md  pyproject.toml
centraljersey/: cache.py  config.py  merge.py  models.py  preprocess.py
centraljersey/census/: load.py
centraljersey/data/: census.py  dialects.py  foursquare.py  njdotcom.py
centraljersey/data/validations/: census.py  dialects.py  foursquare.py  njdotcom.py
exploratory/: data_dictionary.md  maps.ipynb  tracts_data.ipynb  tracts_data.py  utils.py
exploratory/models/: model_funcs.py  regression.ipynb  trees.ipynb
jerseyproj/: db.sqlite3  manage.py
jerseyproj/jerseyproj/: asgi.py  settings.py  urls.py  wsgi.py
jerseyproj/mapapp/: urls.py  views.py
jerseyproj/static/js/: base.js
jerseyproj/templates/mapapp/: index.html
research/: articles.md  culture.md  papers.md
scripts/: census.py  dunkin.py  export.py  folium_map.py  folium_map_tracts.py  load.py  merge.py  model.py  tweets.py  wawa.py
tests/census/: test_load.py
tests/data/: test_census.py  test_dialects.py  test_foursquare.py  test_njdotcom.py
