[tool.poetry]
name = "centraljersey"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
ipykernel = "^6.20.2"
PyYAML = "^6.0"
pandas = "^1.5.3"
geopandas = "^0.12.2"
folium = "^0.14.0"
tabula-py = "^2.7.0"
tqdm = "^4.65.0"
pandera = "^0.15.1"
tabulate = "^0.9.0"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"
flake8 = "^5.0.4"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
